--- a/.gitignore
+++ b/.gitignore
@@ -82,6 +82,7 @@ celerybeat-schedule
 *.sage.py
 
 # Environments
+.DS_Store
 .env
 .venv
 env/
@@ -102,3 +103,5 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+GnomeVsDrones/.DS_Store
+GnomeVsDrones/data/.DS_Store
